<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/agm_name_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:ems="10"
        android:hint="@string/agd_name_hint"
        android:inputType="textCapWords|textAutoCorrect"
        android:minHeight="48dp"
        android:selectAllOnFocus="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/agm_category_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/agd_category_hint"
        app:layout_constraintBottom_toBottomOf="@+id/agm_category_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/agm_category_spinner" />

    <Spinner
        android:id="@+id/agm_category_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/spinner_bg"
        android:minHeight="48dp"
        android:popupBackground="@color/colorPrimaryLight"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/agm_category_hint"
        app:layout_constraintTop_toBottomOf="@id/agm_name_editText" />

    <EditText
        android:id="@+id/agm_unit_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:ems="10"
        android:hint="@string/agd_unit_hint"
        android:inputType="textAutoCorrect"
        android:minHeight="48dp"
        android:selectAllOnFocus="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/agm_category_spinner" />

    <EditText
        android:id="@+id/agm_unitDivider_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:digits="0123456789.,"
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        android:selectAllOnFocus="true"
        android:text="@string/agd_unit_divider_default"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/agm_unit_editText" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/agd_unit_divider_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/agm_unitDivider_editText" />

</androidx.constraintlayout.widget.ConstraintLayout>