<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/groceries_searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/colorPrimary"
        android:inputType="textCapSentences|textAutoCorrect"
        app:iconifiedByDefault="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_category_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:text="@string/action_add_category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groceries_searchView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/edit_category_order_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:text="@string/label_edit_list"
        app:layout_constraintEnd_toStartOf="@id/add_grocery_item_button"
        app:layout_constraintStart_toEndOf="@id/add_category_button"
        app:layout_constraintTop_toBottomOf="@+id/groceries_searchView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_grocery_item_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:text="@string/label_add_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groceries_searchView" />

    <TextView
        android:id="@+id/groceries_empty_list_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/error_no_categories"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_category_button" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_category_button"
        app:layout_constraintBottom_toBottomOf="parent">

        <ExpandableListView
            android:id="@+id/groceries_expandableListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:choiceMode="singleChoice"
            android:groupIndicator="@drawable/expandable_group_indicator"
            android:listSelector="@color/colorAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_category_button" />

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>