<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/shopping_grocery_cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="8dp"
    card_view:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/slg_backgroundLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="48dp"
            android:background="@color/cardBackgroundLight"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/slg_guideline_40"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                card_view:layout_constraintGuide_percent="0.4" />

            <TextView
                android:id="@+id/slg_store_textView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:text="@string/label_store"
                android:textColor="@color/text_color"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/slg_guideline_60"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                card_view:layout_constraintGuide_percent="0.6" />

            <TextView
                android:id="@+id/slg_price_textView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/label_price"
                android:textColor="@color/text_color"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toStartOf="@id/slg_guideline_60"
                card_view:layout_constraintStart_toStartOf="@+id/slg_guideline_40" />

            <TextView
                android:id="@+id/slg_unit_textView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/label_unit"
                android:textColor="@color/text_color"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toEndOf="@+id/slg_guideline_80"
                card_view:layout_constraintStart_toStartOf="@+id/slg_guideline_60" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/slg_guideline_80"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                card_view:layout_constraintGuide_percent="0.8" />

            <TextView
                android:id="@+id/slg_price_per_unit_textView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/label_unit_price"
                android:textColor="@color/text_color"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toStartOf="@id/slg_guideline_80" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/slg_delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/sl_error_empty"
            android:src="@android:drawable/ic_menu_delete"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:tint="@color/colorAccent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
