<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/stores_cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="2dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="2dp"
    card_view:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sc_backgroundLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardBackgroundLight">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            card_view:layout_constraintGuide_percent="0.4" />

        <TextView
            android:id="@+id/sc_store_textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:text="@string/label_store"
            android:textColor="@color/text_color"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_60"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            card_view:layout_constraintGuide_percent="0.6" />

        <TextView
            android:id="@+id/sc_price_textView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:gravity="center"
            android:text="@string/label_price"
            android:textColor="@color/text_color"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toStartOf="@id/guideline_60"
            card_view:layout_constraintStart_toStartOf="@+id/guideline_40" />

        <TextView
            android:id="@+id/sc_unit_textView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:gravity="center"
            android:text="@string/label_unit"
            android:textColor="@color/text_color"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="@+id/guideline_80"
            card_view:layout_constraintStart_toStartOf="@+id/guideline_60" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_80"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            card_view:layout_constraintGuide_percent="0.8" />

        <TextView
            android:id="@+id/sc_price_per_unit_textView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:gravity="center"
            android:text="@string/label_unit_price"
            android:textColor="@color/text_color"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="@id/guideline_80" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
